crates/query-engine/tests/snapshots/tests__sorting_by_nested_relationship_count.snap
---
source: crates/query-engine/tests/tests.rs
expression: result
---
SELECT
  row_to_json("universe") AS "universe"
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          coalesce(json_agg(row_to_json("rows")), '[]') AS "rows"
        FROM
          (
            SELECT
              "Artist"."Name" AS "Name"
            FROM
              "public"."Artist" AS "Artist"
              LEFT OUTER JOIN LATERAL (
                SELECT
                  count("%ORDER_PATH_PART_0_Album"."AlbumId") AS "AlbumId"
                FROM
                  (
                    SELECT
                      "%ORDER_PATH_PART_0_Album"."AlbumId" AS "AlbumId"
                    FROM
                      "public"."Album" AS "%ORDER_PATH_PART_0_Album"
                    WHERE
                      (
                        true
                        AND (
                          "Artist"."ArtistId" = "%ORDER_PATH_PART_0_Album"."ArtistId"
                        )
                      )
                  ) AS "%ORDER_PATH_PART_0_Album"
              ) AS "%ORDER_0_FOR_Artist" ON ('true')
            ORDER BY
              "%ORDER_0_FOR_Artist"."AlbumId" DESC
            LIMIT
              3
          ) AS "rows"
      ) AS "rows"
  ) AS "universe"

[]
