crates/query-engine/tests/snapshots/tests__sorting_by_recursive_relationship_column.snap
---
source: crates/query-engine/tests/tests.rs
expression: result
---
SELECT
  row_to_json("universe") AS "universe"
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          coalesce(json_agg(row_to_json("rows")), '[]') AS "rows"
        FROM
          (
            SELECT
              "Company"."Name" AS "Name"
            FROM
              "public"."Company" AS "Company"
              LEFT OUTER JOIN LATERAL (
                SELECT
                  "%ORDER_PATH_PART_1_Person"."Name" AS "Name"
                FROM
                  (
                    SELECT
                      "%ORDER_PATH_PART_0_Person"."ParentId" AS "ParentId"
                    FROM
                      "public"."Person" AS "%ORDER_PATH_PART_0_Person"
                    WHERE
                      (
                        true
                        AND (
                          "Company"."CEOId" = "%ORDER_PATH_PART_0_Person"."PersonId"
                        )
                      )
                  ) AS "%ORDER_PATH_PART_0_Person"
                  LEFT OUTER JOIN LATERAL (
                    SELECT
                      "%ORDER_PATH_PART_1_Person"."Name" AS "Name"
                    FROM
                      "public"."Person" AS "%ORDER_PATH_PART_1_Person"
                    WHERE
                      (
                        true
                        AND (
                          "%ORDER_PATH_PART_0_Person"."ParentId" = "%ORDER_PATH_PART_1_Person"."PersonId"
                        )
                      )
                  ) AS "%ORDER_PATH_PART_1_Person" ON ('true')
              ) AS "%ORDER_0_FOR_Company" ON ('true')
            ORDER BY
              "%ORDER_0_FOR_Company"."Name" ASC
          ) AS "rows"
      ) AS "rows"
  ) AS "universe"

[]
