crates/query-engine/tests/snapshots/tests__sorting_by_relationship_count.snap
---
source: crates/query-engine/tests/tests.rs
expression: result
---
SELECT
  row_to_json("universe") AS "universe"
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          coalesce(json_agg(row_to_json("rows")), '[]') AS "rows"
        FROM
          (
            SELECT
              "Artist"."Name" AS "Name"
            FROM
              "public"."Artist" AS "Artist"
              LEFT OUTER JOIN LATERAL (
                SELECT
                  COUNT(*) AS "count"
                FROM
                  "Album" AS "Album"
                WHERE
                  (
                    true
                    AND ("Artist"."ArtistId" = "Album"."ArtistId")
                  )
              ) AS "%ORDER_0_COUNT_Artist" ON ('true')
            ORDER BY
              "%ORDER_0_COUNT_Artist"."count" DESC
            LIMIT
              5
          ) AS "rows"
      ) AS "rows"
  ) AS "universe"

[]
